@@ -173,26 +173,26 @@ JSEARCH_FILTER_CLEAR=Clear
 JSEARCH_FILTER_SUBMIT=Search
 JSEARCH_FILTER=Search
 
-JTOOLBAR_DISABLE=Disable
-JTOOLBAR_ENABLE=Enable
 JTOOLBAR_APPLY=Apply
-JTOOLBAR_EMPTY_TRASH=Empty trash
-JTOOLBAR_OPTIONS=Options
+JTOOLBAR_ARCHIVE=Archive
+JTOOLBAR_CANCEL=Cancel
 JTOOLBAR_CLOSE=Close
+JTOOLBAR_DISABLE=Disable
+JTOOLBAR_DUPLICATE=Duplicate
+JTOOLBAR_EDIT=Edit
+JTOOLBAR_EMPTY_TRASH=Empty trash
+JTOOLBAR_ENABLE=Enable
+JTOOLBAR_NEW=New
+JTOOLBAR_OPTIONS=Options
+JTOOLBAR_PUBLISH=Publish
+JTOOLBAR_REBUILD=Rebuild
+JTOOLBAR_REMOVE=Remove
 JTOOLBAR_SAVE=Save
 JTOOLBAR_SAVE_AND_NEW=Save &amp; New
 JTOOLBAR_SAVE_AS_COPY=Save as Copy
 JTOOLBAR_SAVE=Save
-JTOOLBAR_REMOVE=Remove
-JTOOLBAR_REBUILD=Rebuild
-JTOOLBAR_PUBLISH=Publish
-JTOOLBAR_ARCHIVE=Archive
 JTOOLBAR_UNPUBLISH=Unpublish
-JTOOLBAR_CANCEL=Cancel
-JTOOLBAR_CLOSE=Close
-JTOOLBAR_EDIT=Edit
 JTOOLBAR_TRASH=Delete
-JTOOLBAR_NEW=New
 
 JBROWSERTARGET_MODAL=Modal
 JBROWSERTARGET_NEW=New
